@@ -1,0 +1,62 @@
+class 'Fl::SimpleCounter';
+isa 'Fl::Counter';
+include 'FL/Fl_Simple_Counter.H';
+
+=pod
+
+=head1 NAME
+
+Fl::SimpleCounter - Fl::Counter Widget with Only Two Arrow Buttons
+
+=head1 Description
+
+The Fl::SimpleCounter is an Fl::Counter widget that creates a counter with
+only 2 arrow buttons.
+
+=for html <center><img src="http://www.fltk.org/doc-1.3/counter.png" /></center>
+
+=head1 Methods
+
+Fl::SimpleCounter inherits from Fl::Counter and thus Fl::Valuator and
+Fl::Widget. On top of that, it exposes the following methods...
+
+=head2 new(...)
+
+    my $count_a = Fl::SimpleCounter->new(0, 0, 250, 500, 'Important Stuff');
+    my $count_b = Fl::SimpleCounter->new(0, 0, 250, 500);
+
+The constructor creates a new widget using the given position, size, and
+label.
+
+The default type is FL_SIMPLE_COUNTER.
+
+The destructor removes the widget.
+
+=cut
+
+xs {name        => 'new',
+    definitions => [
+            {required => [[qw[int x]], [qw[int y]], [qw[int w]], [qw[int h]]],
+             optional => [['const char *', 'label', ' 0']],
+             returns  => 'Fl_Simple_Counter *'
+            }
+    ]
+};
+xs {name        => 'DESTROY',
+    definitions => [{returns => 'void'}]
+};
+
+=pod
+
+=head1 LICENSE
+
+Copyright (C) Sanko Robinson.
+
+This library is free software; you can redistribute it and/or modify
+it under the same terms as Perl itself.
+
+=head1 AUTHOR
+
+Sanko Robinson E<lt>sanko@cpan.orgE<gt>
+
+=cut
